code25_all/scala/6591886.txt
scala> settings
<console>:24: error: reference to settings is ambiguous;
it is imported twice in the same scope by
import Keys._
and import settings
       settings
       ^

